# pydfu

./: requirements.txt  setup.cfg
docs/: main.md
src/pydfu/: __init__.py  app.py  dfu_util.py  main.py
src/pydfu/api/: app.py
src/pydfu/api/common/: dfu_util.py  publisher.py  singleton.py
src/pydfu/api/routers/: devices.py
src/pydfu/common/: dfu_util.py  publisher.py
src/pydfu/routers/: devices.py  images.py
