[metadata]
name = pydfu
description = Python Device Firmware Upgrade (DFU)
long_description = file: README.md
long_description_content_type = text/markdown
author = Ryan Persée
license = GPL-3.0-or-later
classifiers =
    Development Status :: Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
url = https://github.com/rpersee/pydfu
project_urls =
    Code=https://github.com/rpersee/pydfu

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.8
install_requires =
    pyudev~=0.23.2
    fastapi~=0.75.0
    pydantic~=1.9.0
    uvicorn~=0.15.0
    python-multipart~=0.0.5

[options.packages.find]
where = src
